--- a/environment.yml
+++ b/environment.yml
@@ -15,8 +15,9 @@ dependencies:
 - seaborn==0.7.1
 - h5py==2.7.0
 - opencv3=3.1.0
+- pywget=2.2
+- scikit-image==0.13.0
 - pip:
   - tensorflow==1.1.0
-  - keras==2.0.4
   - theano==0.9.0
 
